Swagger: Removing unnecessary routes
